<resources>
    <string name="app_name">Olympo Fitness</string>

    <string name="action_settings">Ajustes</string>

    <string name="inicio_item">Inicio</string>
    <string name="conocenos_item">Conocenos</string>
    <string name="productos_item">Productos</string>
    <string name="servicios_item">Servicios</string>
    <string name="menbresias_item">Membresias</string>
    <string name="contactenos_item">Contactenos</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="configuracion_item">Configuración</string>
    <string name="title_activity_second">SecondActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_lista_productos">Lista Productos</string>
    <string name="girl_ipsum">asdasdasdasdasdasdssssssssssssssssssssssssssasd
    asdasdasdasdasdasdasdasdasdasdasdasdasd
    asdasdasdasdassssssssssssdasdasd
    sdfdfgfgsdfffffffffffffsdfsdfsdfsdfsdfsdfsd</string>
</resources>
