<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/inicio_item" />
        <item
            android:id="@+id/nav_conocenos"
            android:icon="@drawable/ic_store"
            android:title="@string/conocenos_item" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_store"
            android:title="@string/productos_item" />
        <item
            android:id="@+id/nav_servicios"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/servicios_item" />
        <item
            android:id="@+id/nav_menbresias"
            android:icon="@drawable/ic_truck"
            android:title="@string/menbresias_item" />
        <item
            android:id="@+id/nav_contactenos"
            android:icon="@drawable/ic_file_document"
            android:title="@string/contactenos_item" />

        <!-- Sección de configuración -->
        <item
            android:id="@+id/configuration_section"
            android:title="@string/configuracion_item">
            <menu>
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@android:drawable/ic_lock_power_off"
                    android:title="@string/log_out_item" />
            </menu>
        </item>
    </group>

</menu>
